Use Java 21 text blocks and sequenced-collection methods
The app moved from Java 17 to 21 (build.gradle sourceCompatibility)
but the code hadn't picked up any 17-21 language features since. Did
a full scan for genuine opportunities (pattern-matching instanceof,
switch expressions, records, sealed types, sequenced collections) -
this is a small, mostly Spring-boilerplate codebase, so most
categories had nothing real to change. Two did:

- MoodRepository.search's JPQL was built via multi-line string
  concatenation; converted to a text block. Reads as one query instead
  of quote-and-plus noise, and removes the exact class of missing-space
  bug that concatenation invites (JPQL, like SQL, treats newlines as
  whitespace, so this is a pure formatting change with identical query
  semantics - verified by re-running MoodRepositoryTest, including the
  text-search regression test, against real PostgreSQL).
- WeatherService.geocode's `results.get(0)` -> `results.getFirst()`
  (Sequenced Collections, Java 21): states the "best/first geocoding
  match" intent directly instead of a magic index.

Records were already in use where they fit (WeeklySummary,
WeatherService's Open-Meteo response DTOs) - left as-is. No
instanceof-and-cast, switch, or sealed-type candidates exist in the
codebase to modernize.

Verified via the full test suite plus manual end-to-end checks through
the running app: text search, rating-range filter, and the unfiltered
mood list (all three branches of the rewritten query) via the actual
UI, and a mood save that exercises WeatherService.geocode.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Sv2tCyudRGiFxFiT1mRq9T